--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "compromise": "^14.10.0",
     "fuzzyset": "^1.0.7",
     "email-validator": "^2.0.4",
-    "phone": "^3.1.41"
+    "phone": "^3.1.41",
+    "typescript": "^5.3.0"
   },
   "devDependencies": {
-    "@types/node": "^20.0.0",
-    "typescript": "^5.3.0"
+    "@types/node": "^20.0.0"
   },
   "engines": {
     "node": ">=18.0.0"
